[gd_scene load_steps=9 format=3 uid="uid://ckq3wncsdoxm6"]

[ext_resource type="PackedScene" uid="uid://bn0evpo7eeo3t" path="res://hud.tscn" id="1_e1m02"]
[ext_resource type="Script" path="res://main.gd" id="1_yjopq"]
[ext_resource type="PackedScene" uid="uid://bs8dx8luh027l" path="res://enemy.tscn" id="2_4ll66"]
[ext_resource type="PackedScene" uid="uid://ece2gud1fhci" path="res://Player.tscn" id="2_n23i8"]
[ext_resource type="PackedScene" uid="uid://cxmp32x0prn7g" path="res://Item.tscn" id="3_o756h"]
[ext_resource type="Script" path="res://SpawnPath.gd" id="6_iv1nn"]

[sub_resource type="Curve2D" id="Curve2D_w00xy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 779, 32, 0, 0, 0, 0, 1025, 98, 0, 0, 0, 0, 1026, 535, 0, 0, 0, 0, 735, 621, 0, 0, 0, 0, 196, 609, 0, 0, 0, 0, 43, 481, 0, 0, 0, 0, 43, 175, 0, 0, 0, 0, 200, 25, 0, 0, 0, 0, 779, 32)
}
point_count = 9

[sub_resource type="Curve2D" id="Curve2D_8flnp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 774, 145, 0, 0, 0, 0, 251, 128, 0, 0, 0, 0, 757, 242, 0, 0, 0, 0, 262, 337, 0, 0, 0, 0, 743, 414, 0, 0, 0, 0, 272, 483, 0, 0, 0, 0, 764, 518, 0, 0, 0, 0, 774, 145)
}
point_count = 8

[node name="Main" type="Node" node_paths=PackedStringArray("hud", "player")]
script = ExtResource("1_yjopq")
hud = NodePath("HUD")
player = NodePath("Doomba")
enemy_scene = ExtResource("2_4ll66")
item_scene = ExtResource("3_o756h")

[node name="HUD" parent="." instance=ExtResource("1_e1m02")]

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.498039, 0.243137, 1)

[node name="Doomba" parent="." instance=ExtResource("2_n23i8")]
position = Vector2(367, 326)

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_w00xy")
script = ExtResource("6_iv1nn")

[node name="Location" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2(779, 32)
rotation = 0.26212

[node name="ItemSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_8flnp")
script = ExtResource("6_iv1nn")
random = true

[node name="Location" type="PathFollow2D" parent="ItemSpawnPath"]
position = Vector2(774, 145)
rotation = -3.1091

[node name="EnemyTimer" type="Timer" parent="."]

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="endGame" from="HUD" to="." method="_end_game"]
[connection signal="startGame" from="HUD" to="." method="_new_game"]
[connection signal="HPChange" from="Doomba" to="." method="_update_HP"]
[connection signal="timeout" from="EnemyTimer" to="." method="_spawn_enemy"]
[connection signal="timeout" from="ItemTimer" to="." method="_spawn_pickup"]
